fixed a typo and removed console.log() from JS

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
               </li>
               <li><a id="features-link" href="#features">Features</a></li>
               <li>
-                <a id="testomials-link" href="#testimonials">Testimonials</a>
+                <a id="testimonials-link" href="#testimonials">Testimonials</a>
               </li>
             </ul>
           </nav>
